momentum/css/style.css
/* ... */
.dialogOfSettings, .dialogOfLinks {
  min-width: 450px;
  position: absolute;
  bottom:  70px;
  left: 20px;
  color: rgb(91 91 91);
  background-color: #D6D6D6;
  border: none;
  border-radius: 10px;
  overflow: hidden;
  z-index: -1;
  opacity: 0;
  transition: opacity 0.2s ease-in-out;
}

.dialogOfLinks {
  min-width: 350px;
}

.link-name, .link-url {
  height: 30px;
  width: 100%;
  margin-left: 20px;
  border-radius: 5px;
  border: 1px solid #999;
  outline: none;
  padding: 0 10px;
}

.saveBtn, .deleteBtn {
  border: 1px solid #999;
  border-radius: 6px;
  background: rgb(214, 214, 214);
  font-size: 16px;
  line-height: 34px;
  padding: 0px 15px;
  cursor: pointer;
  margin-left: 5px;
  margin-right: 5px;
}

.saveBtn.nosave {
  cursor: not-allowed;
}

.deleteBtn {
  display: none;
}

.deleteBtn.show {
  display: block;
}

.saveBtn:hover, .deleteBtn:hover {
  background: linear-gradient(rgba(214, 214, 214, 0), rgba(255, 255, 255, 0.37));
}

.dialogOfSettings.show, .dialogOfLinks.show {
  opacity: 1;
  z-index: 2;
  transition: opacity 0.2s ease-in-out;
}

.dialogOfSettings ::-webkit-scrollbar, .dialogOfLinks ::-webkit-scrollbar {
  width: 13px;
	height: 13px;
}

.dialogOfSettings ::-webkit-scrollbar-thumb, .dialogOfLinks ::-webkit-scrollbar-thumb {
  background-color: rgba(136, 136, 136, 0.8);
  background-clip: padding-box;
  border-radius: 7px;
	border: 3px solid transparent;
}

.dialog-header {
  font-size: 18px;
  font-weight: bold;
  background-color: #bababa;
  padding-top: 10px;
  padding-bottom: 10px;
  border-bottom: 1px solid #999;
}

.dialog-subtitle {
  font-size: 18px;
  font-weight: bold;
  padding-top: 15px;
  padding-bottom: 15px;
  padding-left: 30px;
  text-align: left;
  background-color: #bababa;
}

.area {
  border-bottom: 1px solid #999;
  padding: 15px 30px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.area-options {
  display: flex;
}

.title-link, .title-link:visited, .title-link:active {
  text-decoration: none;
  color: #5B5B5B;
}

.dialog-body {
  overflow-y: auto;
  max-height: 500px;
}

.dialog-list-body {
  overflow-y: auto;
  max-height: 500px;
  display: none;
}

.dialog-list-body.show {
  display: block;
}

.edit-link-body {
  display: none;
}

.edit-link-body.show {
  display: flex;
  flex-direction: column;
}

.link-area {
  display: flex;
  justify-content: center;
  padding: 15px 30px;
  align-items: center;
  border-bottom: 1px solid rgb(153, 153, 153);
}

.set-link-title-name, .set-link-title-url {
  width: 100px;
  text-align: left;
}

.radioGroup {
	display: inline-block;
  font-size: 0;
}
.radioGroupItem {
	display: inline-block;
}
.radioGroup input[type=radio] {
	display: none;
}
.radioGroup input[type=checkbox] {
	display: none;
}
.radioGroup label {
  border: 1px solid #999;
  font-size: 16px;
	display: inline-block;
	line-height: 34px;
	cursor: pointer;
	border-right: none;
	user-select: none;
  padding: 0px 15px;
}
 
.radioGroup .radioGroupItem:first-child label {
	border-radius: 6px 0 0 6px;
}
.radioGroup .radioGroupItem:last-child label {
  border-right: 1px solid #999;
	border-radius: 0 6px 6px 0;
}

.radioGroup input[type=radio] + label, .radioGroup input[type=checkbox] + label{
	background: #D6D6D6;
}
 
.radioGroup input[type=radio]:checked + label, .radioGroup input[type=checkbox]:checked + label {
	background-color: #9bcb75;
}

.radioGroup input[type=radio]:checked + label {
  cursor: auto;
}
 
.radioGroup input[type=radio] + label:hover, .radioGroup input[type=checkbox] + label:hover {
  background: linear-gradient(#d6d6d600, #ffffff5e);
}

.radioGroup input[type=radio]:checked + label:hover, .radioGroup input[type=checkbox]:checked + label:hover {
  background: linear-gradient(#9bcb75, #9bcb75);
}

.close-button {
  position: absolute;
  right: 20px;
  top: 5px;
  cursor: pointer;
  background-image: url(../assets/svg/closeBtn.svg);
  background-size: contain;
  width: 30px;
  height: 30px;
}

.add-button {
  position: absolute;
  left: 20px;
  top: 7.5px;
  cursor: pointer;
  background-image: url(../assets/svg/addBtn.svg);
  background-size: contain;
  width: 25px;
  height: 25px;
}

.add-button.back {
  background-image: url(../assets/svg/backBtn.svg);
}

.edit-link-button {
  cursor: pointer;
  background-image: url(../assets/svg/editBtn.svg);
  background-size: contain;
  width: 25px;
  height: 25px;
}

.close-button:hover, .add-button:hover, .edit-link-button:hover, .title-link:hover {
  opacity: 0.6;
}


@media (max-width: 768px) {
  .time {
    min-height: 80px;
    font-size: 72px;    
  }

  .greeting-container {
    min-height: 40px;
    font-size: 32px;
  }

  .greeting {
    padding: 5px;
  }

  .name {
    font-size: 32px;
    padding: 5px;
  }
}

@media (max-width: 767px) {
  .dialogOfSettings {
    min-width: 0;
    width: 280px;
  }
  .dialogOfLinks {
    min-width: 0;
    width: 280px;
  }
  .header {
    flex-wrap: wrap;
    height: 100%;
  }
  .player{
    width: 100%;
    border-bottom: 1px solid rgb(255 255 255 / 50%);
    padding-bottom: 20px;
    margin-bottom: 20px;
  }
  .weather {
    padding-bottom: 20px;
    margin-bottom: 20px;
  }
  .volume-slider {
    width: 95%;
  }
  .greeting-container{
    flex-direction: column;
  }
  .greeting {
    font-size: 26px;
  }
  .name {
    font-size: 20px;
    text-align: center;
  }
  .time {
    font-size: 50px;
    min-height: 0;
  }
  .date {
    font-size: 16px;
  }
  .footer {
    height: 300px;
  }
  .footer-quote {
    position: absolute;
    bottom: 140px;
    left: 0;
    padding-left: 20px;
    padding-right: 20px;
    width: 100%;
    z-index: 1;
  }
  .dialogOfSettings .area {
    padding: 15px 0;
    flex-direction: column;
  }
  .area-title{
    padding-bottom: 10px;
  }
}

